--- a/dev/index.html
+++ b/dev/index.html
@@ -205,15 +205,26 @@
     <h3 class="mt-16">Button Groups</h3>
     <div>
       <div class="btn-group">
+        <button class="btn btn--solid">One</button>
+        <button class="btn btn--solid">Two</button>
+        <button class="btn btn--solid">Three</button>
+      </div>
+
+      <div class="mt-8 btn-group btn-group--wide">
         <button class="btn">One</button>
         <button class="btn">Two</button>
         <button class="btn">Three</button>
       </div>
 
-      <div class="mt-8 btn-group btn-group--wide">
-        <button class="btn btn--solid">One</button>
-        <button class="btn btn--solid">Two</button>
-        <button class="btn btn--solid">Three</button>
+      <div class="mt-8 btn-group">
+        <button class="btn">
+          <svg class="btn-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+            aria-hidden="true">
+            <path d="M5 4a2 2 0 012-2h6a2 2 0 012 2v14l-5-2.5L5 18V4z" />
+          </svg>
+          <span>Bookmark</span>
+        </button>
+        <button class="btn">12k</button>
       </div>
     </div>
 
