--- a/dev/index.html
+++ b/dev/index.html
@@ -31,9 +31,13 @@
         </svg>
         <span>Button</span>
       </button>
+      <button class="btn btn--inverted">Inverted</button>
       <button disabled>Disabled</button>
       <button class="btn--compact">Button</button>
     </div>
+
+    <button class="mt-8 btn--wide">Button Wide</button>
+    <button class="mt-8 btn--block btn--inverted">Button Block</button>
 
     <h3 class="mt-16">Solid</h3>
     <div class="buttons">
@@ -47,7 +51,6 @@
         <span>Button</span></button>
       <button class="btn btn--solid btn--primary">Button</button>
       <button class="btn btn--solid btn--secondary">Button</button>
-      <button class="btn btn--solid btn--neutral">Button</button>
       <button class="btn btn--solid btn--info">Button</button>
       <button class="btn btn--solid btn--success">Button</button>
       <button class="btn btn--solid btn--warning">Button</button>
@@ -71,7 +74,6 @@
       </button>
       <button class="btn btn--outline btn--primary">Button</button>
       <button class="btn btn--outline btn--secondary">Button</button>
-      <button class="btn btn--outline btn--neutral">Button</button>
       <button class="btn btn--outline btn--info">Button</button>
       <button class="btn btn--outline btn--success">Button</button>
       <button class="btn btn--outline btn--warning">Button</button>
@@ -87,7 +89,6 @@
       <button class="btn btn--faded">Button</button>
       <button class="btn btn--faded btn--primary">Button</button>
       <button class="btn btn--faded btn--secondary">Button</button>
-      <button class="btn btn--faded btn--neutral">Button</button>
       <button class="btn btn--faded btn--info">Button</button>
       <button class="btn btn--faded btn--success">Button</button>
       <button class="btn btn--faded btn--warning">Button</button>
@@ -103,7 +104,6 @@
       <button class="btn btn--ghost">Button</button>
       <button class="btn btn--ghost btn--primary">Button</button>
       <button class="btn btn--ghost btn--secondary">Button</button>
-      <button class="btn btn--ghost btn--neutral">Button</button>
       <button class="btn btn--ghost btn--info">Button</button>
       <button class="btn btn--ghost btn--success">Button</button>
       <button class="btn btn--ghost btn--warning">Button</button>
@@ -119,7 +119,6 @@
       <button class="btn btn--link">Button</button>
       <button class="btn btn--link btn--primary">Button</button>
       <button class="btn btn--link btn--secondary">Button</button>
-      <button class="btn btn--link btn--neutral">Button</button>
       <button class="btn btn--link btn--info">Button</button>
       <button class="btn btn--link btn--success">Button</button>
       <button class="btn btn--link btn--warning">Button</button>
@@ -210,10 +209,10 @@
         <button class="btn btn--solid">Three</button>
       </div>
 
-      <div class="mt-8 btn-group btn-group--wide">
+      <div class="mt-8 btn-group btn-group--block">
         <button class="btn">One</button>
         <button class="btn">Two</button>
-        <button class="btn">Three</button>
+        <button class="btn btn--inverted">Three</button>
       </div>
 
       <div class="mt-8 btn-group">
