--- a/dev/index.html
+++ b/dev/index.html
@@ -32,6 +32,13 @@
       </div>
     </div>
 
+    <div class="my-16 stack">
+      <span class="badge">Badge</span>
+      <span class="badge badge--solid">Badge</span>
+      <span class="badge badge--outline">Badge</span>
+      <span class="badge badge--dot">Badge</span>
+    </div>
+
   </div>
 </body>
 
