--- a/dev/index.html
+++ b/dev/index.html
@@ -19,11 +19,11 @@
   <div class="mx-auto xl:container p-32">
     <header class="navbar">Menu</header>
 
-    <div class="keys-1 my-16">
+    <div class="keys-1 my-20">
       <kbd>⌘</kbd> + <kbd>shift</kbd> + <kbd>M</kbd>
     </div>
 
-    <div class="keys-2  my-16">
+    <div class="keys-2  my-20">
       <div class="kbd">
         <span class="kbd__key">⌘</span>
         +
@@ -32,7 +32,7 @@
       </div>
     </div>
 
-    <div class="my-16 stack">
+    <div class="stack my-32">
       <span class="badge">Badge</span>
       <span class="badge badge--solid">Badge</span>
       <span class="badge badge--outline">Badge</span>
