--- a/dev/index.html
+++ b/dev/index.html
@@ -32,11 +32,40 @@
       </div>
     </div>
 
-    <div class="stack my-32">
-      <span class="badge">Badge</span>
+    <h3>Badges</h3>
+    <div class="stack my-20">
+      <span class="badge badge">Badge</span>
       <span class="badge badge--solid">Badge</span>
       <span class="badge badge--outline">Badge</span>
       <span class="badge badge--dot">Badge</span>
+    </div>
+
+    <div class="stack mt-20">
+      <span class="badge badge--accent">Badge</span>
+      <span class="badge badge--solid badge--accent">Badge</span>
+      <span class="badge badge--outline badge--accent">Badge</span>
+      <span class="badge badge--dot badge--accent">Badge</span>
+    </div>
+
+    <div class="stack mt-20">
+      <span class="badge badge--secondary">Badge</span>
+      <span class="badge badge--solid badge--secondary">Badge</span>
+      <span class="badge badge--outline badge--secondary">Badge</span>
+      <span class="badge badge--dot badge--secondary">Badge</span>
+    </div>
+
+    <div class="stack mt-20">
+      <span class="badge badge--danger">Badge</span>
+      <span class="badge badge--solid badge--danger">Badge</span>
+      <span class="badge badge--outline badge--danger">Badge</span>
+      <span class="badge badge--dot badge--danger">Badge</span>
+    </div>
+
+    <div class="stack mt-20">
+      <span class="badge badge--neutral">Badge</span>
+      <span class="badge badge--solid badge--neutral">Badge</span>
+      <span class="badge badge--outline badge--neutral">Badge</span>
+      <span class="badge badge--dot badge--neutral">Badge</span>
     </div>
 
   </div>
