--- a/dev/index.html
+++ b/dev/index.html
@@ -34,7 +34,7 @@
 
     <h3>Badges</h3>
     <div class="stack my-20">
-      <span class="badge badge">Badge</span>
+      <span class="badge">Badge</span>
       <span class="badge badge--solid">Badge</span>
       <span class="badge badge--outline">Badge</span>
       <span class="badge badge--dot">Badge</span>
@@ -55,6 +55,34 @@
     </div>
 
     <div class="stack mt-20">
+      <span class="badge badge--neutral">Badge</span>
+      <span class="badge badge--solid badge--neutral">Badge</span>
+      <span class="badge badge--outline badge--neutral">Badge</span>
+      <span class="badge badge--dot badge--neutral">Badge</span>
+    </div>
+
+    <div class="stack mt-20">
+      <span class="badge badge--info">Badge</span>
+      <span class="badge badge--solid badge--info">Badge</span>
+      <span class="badge badge--outline badge--info">Badge</span>
+      <span class="badge badge--dot badge--info">Badge</span>
+    </div>
+
+    <div class="stack mt-20">
+      <span class="badge badge--success">Badge</span>
+      <span class="badge badge--solid badge--success">Badge</span>
+      <span class="badge badge--outline badge--success">Badge</span>
+      <span class="badge badge--dot badge--success">Badge</span>
+    </div>
+
+    <div class="stack mt-20">
+      <span class="badge badge--warning">Badge</span>
+      <span class="badge badge--solid badge--warning">Badge</span>
+      <span class="badge badge--outline badge--warning">Badge</span>
+      <span class="badge badge--dot badge--warning">Badge</span>
+    </div>
+
+    <div class="stack mt-20">
       <span class="badge badge--danger">Badge</span>
       <span class="badge badge--solid badge--danger">Badge</span>
       <span class="badge badge--outline badge--danger">Badge</span>
@@ -62,11 +90,47 @@
     </div>
 
     <div class="stack mt-20">
-      <span class="badge badge--neutral">Badge</span>
-      <span class="badge badge--solid badge--neutral">Badge</span>
-      <span class="badge badge--outline badge--neutral">Badge</span>
-      <span class="badge badge--dot badge--neutral">Badge</span>
+      <span class="badge badge--group">
+        <button class="btn btn--circle btn--ghost">
+          <svg class="h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+            stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+          </svg>
+        </button>
+        <span>Badge</span>
+      </span>
+
+      <span class="badge badge--solid badge--group">
+        <span>Badge</span>
+        <button class="btn btn--circle btn--solid">
+          <svg class="h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+            stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+          </svg>
+        </button>
+      </span>
+
+      <span class="badge badge--solid badge--danger badge--group">
+        <span>Badge</span>
+        <button class="btn btn--circle btn--faded btn--danger">
+          <svg class="h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+            stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+          </svg>
+        </button>
+      </span>
+
+      <span class="badge badge--outline badge--danger badge--group">
+        <span>Badge</span>
+        <button class="btn btn--circle btn--ghost btn--danger">
+          <svg class="h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+            stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+          </svg>
+        </button>
+      </span>
     </div>
+
 
   </div>
 </body>
