--- a/dev/buttons.html
+++ b/dev/buttons.html
@@ -19,7 +19,7 @@
   <div class="mx-auto xl:container p-32">
     <h3 class="mt-16">Default</h3>
     <div class="stack">
-      <button>Button</button>
+      <button class="btn">Button</button>
       <button class="btn">
         <svg class="btn-icon" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2"
           fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -30,12 +30,12 @@
         <span>Button</span>
       </button>
       <button class="btn btn--inverted">Inverted</button>
-      <button disabled>Disabled</button>
-      <button class="btn--compact">Button</button>
+      <button class="btn" disabled>Disabled</button>
+      <button class="btn btn--compact">Button</button>
     </div>
 
-    <button class="mt-8 btn--wide">Button Wide</button>
-    <button class="mt-8 btn--block btn--inverted">Button Block</button>
+    <button class="mt-8 btn btn--wide">Button Wide</button>
+    <button class="mt-8 btn btn--block btn--inverted">Button Block</button>
 
     <h3 class="mt-16">Solid</h3>
     <div class="stack">
