--- a/dev/index.html
+++ b/dev/index.html
@@ -131,6 +131,12 @@
       </span>
     </div>
 
+    <div class="stack mt-20">
+      <span class="badge badge--large">Badge</span>
+      <span class="badge badge--solid badge--large">Badge</span>
+      <span class="badge badge--faded badge--info badge--large">Badge</span>
+      <span class="badge badge--outline badge--accent badge--large">Badge</span>
+    </div>
 
   </div>
 </body>
