--- a/dev/index.html
+++ b/dev/index.html
@@ -19,6 +19,9 @@
   <div class="mx-auto p-32">
     <header class="navbar">Menu</header>
   </div>
+
+  <div class="w-64 h-64 bg-text-1">
+  </div>
 </body>
 
 </html>
