--- a/dev/index.html
+++ b/dev/index.html
@@ -17,7 +17,7 @@
 
 <body class="accent-primary">
   <div class="mx-auto p-32">
-    <header class="navbar">Menu</header>
+    <header class="navbar text-danger-6 font-medium underline">Menu</header>
   </div>
 </body>
 
