--- a/dev/index.html
+++ b/dev/index.html
@@ -19,6 +19,16 @@
   <div class="mx-auto p-32">
     <header class="navbar text-danger-6 font-medium underline">Menu</header>
   </div>
+
+  <div class="mt-32">
+    Lorem ipsum dolor sit, amet consectetur <span
+      class="underline underline-offset-2 decoration-2 decoration-success-6 hover:decoration-danger-6">adipisicing
+      elit</span>. Rem
+    veniam non omnis
+    dolorum. Necessitatibus molestias
+    praesentium eius! Totam ratione, ullam dolore repellat enim minus blanditiis molestiae reiciendis autem, odio
+    libero!
+  </div>
 </body>
 
 </html>
