--- a/dev/index.html
+++ b/dev/index.html
@@ -21,13 +21,10 @@
   </div>
 
   <div class="mt-32">
-    Lorem ipsum dolor sit, amet consectetur <span
-      class="underline underline-offset-2 decoration-2 decoration-success-6 hover:decoration-danger-6">adipisicing
-      elit</span>. Rem
-    veniam non omnis
-    dolorum. Necessitatibus molestias
-    praesentium eius! Totam ratione, ullam dolore repellat enim minus blanditiis molestiae reiciendis autem, odio
-    libero!
+    <button class="btn btn--solid btn--accent">
+      <span class="loader"></span>
+      <span>Download</span>
+    </button>
   </div>
 </body>
 
