--- a/dev/index.html
+++ b/dev/index.html
@@ -16,15 +16,11 @@
 </head>
 
 <body class="accent-primary">
-  <div class="mx-auto p-32">
-    <header class="navbar text-danger-6 font-medium underline">Menu</header>
-  </div>
-
-  <div class="mt-32">
-    <button class="btn btn--solid btn--accent">
-      <span class="loader"></span>
-      <span>Download</span>
-    </button>
+  <div class="my-32 space-y-md">
+    <div class="w-256 h-128 bg-success-1 border-1 border-border-2 rounded-md centered text-xl text-grey-9">Stack
+    </div>
+    <div class="w-256 h-128 bg-info-1 border-1 border-border-2 rounded-md"></div>
+    <div class="w-256 h-128 bg-danger-1 border-1 border-border-2 rounded-md"></div>
   </div>
 </body>
 
