--- a/dev/index.html
+++ b/dev/index.html
@@ -16,12 +16,9 @@
 </head>
 
 <body class="accent-primary">
-  <div class="my-32 space-y-md">
-    <div class="w-256 h-128 bg-success-1 border-1 border-border-2 rounded-md centered text-xl text-grey-9">Stack
-    </div>
-    <div class="w-256 h-128 bg-info-1 border-1 border-border-2 rounded-md"></div>
-    <div class="w-256 h-128 bg-danger-1 border-1 border-border-2 rounded-md"></div>
-  </div>
+  <div class="w-64 h-64 bg-secondary-6"></div>
+
+  <button class="btn btn--solid btn--green">Button</button>
 </body>
 
 </html>
