--- a/dev/index.html
+++ b/dev/index.html
@@ -16,9 +16,7 @@
 </head>
 
 <body class="accent-primary">
-  <div class="w-64 h-64 bg-secondary-6"></div>
-
-  <button class="btn btn--solid btn--green">Button</button>
+  <button class="btn btn--solid btn--primary">Button</button>
 </body>
 
 </html>
