--- a/dev/index.html
+++ b/dev/index.html
@@ -16,7 +16,12 @@
 </head>
 
 <body class="accent-primary">
-  <button class="btn btn--solid btn--primary">Button</button>
+
+  <div class="stack my-32 w-128 h-64 text-text-2">
+    <div class="w-128 h-64 bg-white border-1 border-border-1 centered">A</div>
+    <div class="w-128 h-64 bg-white border-1 border-border-1">B</div>
+    <div class="w-128 h-64 bg-white border-1 border-border-1">C</div>
+  </div>
 </body>
 
 </html>
