--- a/dev/index.html
+++ b/dev/index.html
@@ -15,12 +15,12 @@
     rel="stylesheet">
 </head>
 
-<body class="accent-primary">
+<body class="accent-primary centered">
 
-  <div class="stack my-32 w-128 h-64 text-text-2">
-    <div class="w-128 h-64 bg-white border-1 border-border-1 centered">A</div>
-    <div class="w-128 h-64 bg-white border-1 border-border-1">B</div>
-    <div class="w-128 h-64 bg-white border-1 border-border-1">C</div>
+  <div class="stack my-32 w-128 h-64 color-text-2">
+    <div class="w-128 h-64 bg-white rounded border centered">AAA</div>
+    <div class="w-128 h-64 bg-white rounded border">BBB</div>
+    <div class="w-128 h-64 bg-white rounded border">CCC</div>
   </div>
 </body>
 
