--- a/dev/index.html
+++ b/dev/index.html
@@ -15,12 +15,13 @@
     rel="stylesheet">
 </head>
 
-<body class="accent-primary centered">
+<body class="accent-primary">
 
-  <div class="stack my-32 w-128 h-64 color-text-2">
-    <div class="w-128 h-64 bg-white rounded border centered">AAA</div>
-    <div class="w-128 h-64 bg-white rounded border">BBB</div>
-    <div class="w-128 h-64 bg-white rounded border">CCC</div>
+  <div class="stack my-32 font-medium">
+    <div class="w-256 aspect-golden color-danger-7 bg-danger-2 rounded-xl border border-danger-4 shadow centered">A
+    </div>
+    <div class="w-256 aspect-golden bg-warning-2 rounded-xl border border-warning-4 shadow">B</div>
+    <div class="w-256 aspect-golden bg-success-2 rounded-xl border border-success-4 shadow">C</div>
   </div>
 </body>
 
