--- a/dev/index.html
+++ b/dev/index.html
@@ -23,6 +23,8 @@
     <div class="w-256 aspect-golden bg-warning-2 rounded-xl border border-warning-4 shadow">B</div>
     <div class="w-256 aspect-golden bg-success-2 rounded-xl border border-success-4 shadow">C</div>
   </div>
+
+  <img class="mask mask-hexagon" src="https://placeimg.com/160/160/arch" />
 </body>
 
 </html>
