--- a/dev/index.html
+++ b/dev/index.html
@@ -15,9 +15,26 @@
     rel="stylesheet">
 </head>
 
-<body class="accent-primary">
-
+<body class="accent-primary mt-32">
   <img class="mask mask-hexagon" src="https://placeimg.com/160/160/arch" />
+
+  <div class="my-32">
+    <span class="tag tag--dot tag--success">Success</span>
+    <span class="tag tag--dot tag--danger">Danger</span>
+  </div>
+
+  <div class="my-32 space-x-xl">
+    <div class="indicator">
+      <span
+        class="indicator__item indicator--start badge badge--solid badge--info badge--dot border-2 border-srf-1"></span>
+      <img class="mask mask-square" src="https://placeimg.com/64/64/arch" />
+    </div>
+
+    <div class="indicator">
+      <span class="indicator__item badge badge--solid badge--danger">NEW</span>
+      <img class="mask mask-square" src="https://placeimg.com/64/64/arch" />
+    </div>
+  </div>
 </body>
 
 </html>
