--- a/dev/badges.html
+++ b/dev/badges.html
@@ -18,63 +18,63 @@
 <body class="accent-primary">
   <div class="mx-auto xl:container p-32">
     <h3>Badges</h3>
-    <div class="stack my-20">
+    <div class="space-x-md items-center flex my-20">
       <span class="badge">Badge</span>
       <span class="badge badge--solid">Badge</span>
       <span class="badge badge--outline">Badge</span>
-      <span class="badge badge--dot">Badge</span>
+      <span class="badge badge--status">Badge</span>
     </div>
 
-    <div class="stack mt-20">
+    <div class="space-x-md items-center flex mt-20">
       <span class="badge badge--accent">Badge</span>
       <span class="badge badge--solid badge--accent">Badge</span>
       <span class="badge badge--outline badge--accent">Badge</span>
-      <span class="badge badge--dot badge--accent">Badge</span>
+      <span class="badge badge--status badge--accent">Badge</span>
     </div>
 
-    <div class="stack mt-20">
+    <div class="space-x-md items-center flex mt-20">
       <span class="badge badge--secondary">Badge</span>
       <span class="badge badge--solid badge--secondary">Badge</span>
       <span class="badge badge--outline badge--secondary">Badge</span>
-      <span class="badge badge--dot badge--secondary">Badge</span>
+      <span class="badge badge--status badge--secondary">Badge</span>
     </div>
 
-    <div class="stack mt-20">
+    <div class="space-x-md items-center flex mt-20">
       <span class="badge badge--neutral">Badge</span>
       <span class="badge badge--solid badge--neutral">Badge</span>
       <span class="badge badge--outline badge--neutral">Badge</span>
-      <span class="badge badge--dot badge--neutral">Badge</span>
+      <span class="badge badge--status badge--neutral">Badge</span>
     </div>
 
-    <div class="stack mt-20">
+    <div class="space-x-md items-center flex mt-20">
       <span class="badge badge--info">Badge</span>
       <span class="badge badge--solid badge--info">Badge</span>
       <span class="badge badge--outline badge--info">Badge</span>
-      <span class="badge badge--dot badge--info">Badge</span>
+      <span class="badge badge--status badge--info">Badge</span>
     </div>
 
-    <div class="stack mt-20">
+    <div class="space-x-md items-center flex mt-20">
       <span class="badge badge--success">Badge</span>
       <span class="badge badge--solid badge--success">Badge</span>
       <span class="badge badge--outline badge--success">Badge</span>
-      <span class="badge badge--dot badge--success">Badge</span>
+      <span class="badge badge--status badge--success">Badge</span>
     </div>
 
-    <div class="stack mt-20">
+    <div class="space-x-md items-center flex mt-20">
       <span class="badge badge--warning">Badge</span>
       <span class="badge badge--solid badge--warning">Badge</span>
       <span class="badge badge--outline badge--warning">Badge</span>
-      <span class="badge badge--dot badge--warning">Badge</span>
+      <span class="badge badge--status badge--warning">Badge</span>
     </div>
 
-    <div class="stack mt-20">
+    <div class="space-x-md items-center flex mt-20">
       <span class="badge badge--danger">Badge</span>
       <span class="badge badge--solid badge--danger">Badge</span>
       <span class="badge badge--outline badge--danger">Badge</span>
-      <span class="badge badge--dot badge--danger">Badge</span>
+      <span class="badge badge--status badge--danger">Badge</span>
     </div>
 
-    <div class="stack mt-20">
+    <div class="space-x-md items-center flex mt-20">
       <span class="badge badge--group">
         <button class="btn btn--circle btn--ghost">
           <svg class="h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -97,7 +97,7 @@
 
       <span class="badge badge--solid badge--danger badge--group">
         <span>Badge</span>
-        <button class="btn btn--circle btn--faded btn--danger">
+        <button class="btn btn--circle btn--solid btn--danger">
           <svg class="h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
             stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
@@ -116,7 +116,7 @@
       </span>
     </div>
 
-    <div class="stack mt-20">
+    <div class="space-x-md items-center flex mt-20">
       <span class="badge badge--large">Badge</span>
       <span class="badge badge--solid badge--large">Badge</span>
       <span class="badge badge--faded badge--info badge--large">Badge</span>
