--- a/dev/index.html
+++ b/dev/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="indicator">
-      <span class="indicator__item badge badge--danger">NEW</span>
+      <span class="indicator__item badge badge--solid badge--small badge--danger hover:bg-success-6">NEW</span>
       <img class="rounded-xl shadow" src="https://placeimg.com/64/64/arch" />
     </div>
   </div>
