--- a/dev/badges.html
+++ b/dev/badges.html
@@ -76,7 +76,7 @@
 
     <div class="space-x-md items-center flex mt-20">
       <span class="badge badge--group">
-        <button class="btn btn--circle btn--ghost">
+        <button class="btn btn--circle btn--faded">
           <svg class="h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
             stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
