--- a/dev/buttons.html
+++ b/dev/buttons.html
@@ -18,7 +18,7 @@
 <body class="accent-primary">
   <div class="mx-auto xl:container p-32">
     <h3 class="mt-16">Default</h3>
-    <div class="stack">
+    <div class="flex flex-wrap items-center gap-8">
       <button class="btn">Button</button>
       <button class="btn">
         <svg class="btn-icon" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2"
@@ -38,7 +38,7 @@
     <button class="mt-8 btn btn--block btn--inverted">Button Block</button>
 
     <h3 class="mt-16">Solid</h3>
-    <div class="stack">
+    <div class="flex flex-wrap items-center gap-8">
       <button class="btn btn--solid">
         <svg class="btn-icon" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2"
           fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -60,7 +60,7 @@
     </div>
 
     <h3 class="mt-16">Outline</h3>
-    <div class="stack">
+    <div class="flex flex-wrap items-center gap-8">
       <button class="btn btn--outline">
         <svg class="btn-icon" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2"
           fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -83,7 +83,7 @@
     </div>
 
     <h3 class="mt-16">Faded</h3>
-    <div class="stack">
+    <div class="flex flex-wrap items-center gap-8">
       <button class="btn btn--faded">Button</button>
       <button class="btn btn--faded btn--primary">Button</button>
       <button class="btn btn--faded btn--secondary">Button</button>
@@ -98,7 +98,7 @@
     </div>
 
     <h3 class="mt-16">Ghost</h3>
-    <div class="stack">
+    <div class="flex flex-wrap items-center gap-8">
       <button class="btn btn--ghost">Button</button>
       <button class="btn btn--ghost btn--primary">Button</button>
       <button class="btn btn--ghost btn--secondary">Button</button>
@@ -113,7 +113,7 @@
     </div>
 
     <h3 class="mt-16">Link</h3>
-    <div class="stack">
+    <div class="flex flex-wrap items-center gap-8">
       <button class="btn btn--link">Button</button>
       <button class="btn btn--link btn--primary">Button</button>
       <button class="btn btn--link btn--secondary">Button</button>
@@ -128,7 +128,7 @@
     </div>
 
     <h3 class="mt-16">Variations</h3>
-    <div class="stack">
+    <div class="flex flex-wrap items-center gap-8">
       <button class="btn btn--circle">
         <svg class="h-20 w-20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
