--- a/dev/index.html
+++ b/dev/index.html
@@ -16,6 +16,67 @@
 </head>
 
 <body class="accent-primary mt-32">
+  <div class="my-32 flex space-x-xl">
+    <div class="avatar">
+      <div class="avatar__content">
+        <img class="mask mask-circle" src="https://placeimg.com/64/64/arch" />
+      </div>
+    </div>
+
+    <div class="avatar">
+      <div class="avatar__placeholder">NM</div>
+    </div>
+
+    <div class="avatar">
+      <div class="avatar__placeholder bg-success-2 color-success-7">NM</div>
+    </div>
+
+    <div class="avatar">
+      <div class="avatar__placeholder bg-danger-2 color-danger-7">NM</div>
+    </div>
+
+    <div class="avatar-group">
+      <div class="avatar">
+        <div class="avatar__content">
+          <img class="mask mask-circle" src="https://placeimg.com/64/64/people" />
+        </div>
+      </div>
+      <div class="avatar">
+        <div class="avatar__content">
+          <img class="mask mask-circle" src="https://placeimg.com/64/64/people" />
+        </div>
+      </div>
+      <div class="avatar">
+        <div class="avatar__content">
+          <img class="mask mask-circle" src="https://placeimg.com/64/64/people" />
+        </div>
+      </div>
+    </div>
+
+    <div class="avatar-group">
+      <div class="avatar">
+        <div class="avatar__content">
+          <img class="mask mask-circle" src="https://placeimg.com/64/64/people" />
+        </div>
+      </div>
+      <div class="avatar">
+        <div class="avatar__content">
+          <img class="mask mask-circle" src="https://placeimg.com/64/64/people" />
+        </div>
+      </div>
+      <div class="avatar">
+        <div class="avatar__content">
+          <img class="mask mask-circle" src="https://placeimg.com/64/64/people" />
+        </div>
+      </div>
+
+      <div class="avatar">
+        <div class="avatar__placeholder text-md">+69</div>
+      </div>
+    </div>
+  </div>
+
+
   <div class="my-32">
     <span class="badge badge--status badge--success">Success</span>
     <span class="badge badge--status badge--danger">Danger</span>
