--- a/dev/avatars.html
+++ b/dev/avatars.html
@@ -29,7 +29,7 @@
       </div>
     </div>
 
-    <div class="avatar avatar--status avatar--status--danger">
+    <div class="avatar avatar--status avatar--status--start avatar--status--danger">
       <div class="avatar__content">
         <img class="mask mask-circle" src="https://placeimg.com/64/64/arch" />
       </div>
@@ -93,38 +93,6 @@
       <div class="avatar">
         <div class="avatar__content avatar__content--placeholder text-md">+69</div>
       </div>
-    </div>
-  </div>
-
-  <div class="my-32">
-    <span class="badge badge--status badge--success">Success</span>
-    <span class="badge badge--status badge--danger">Danger</span>
-  </div>
-
-  <div class="my-32 space-x-xl">
-    <div class="indicator">
-      <span class="indicator__item flex">
-        <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-info-6 opacity-50"></span>
-        <span class="badge badge--solid badge--info badge--dot border-2 border-srf-1"></span>
-      </span>
-      <img class="rounded-xl shadow" src="https://placeimg.com/64/64/arch" />
-    </div>
-
-    <div class="indicator">
-      <span class="indicator__item indicator--start badge badge--solid badge--danger hover:bg-success-6">NEW</span>
-      <img class="rounded-xl shadow" src="https://placeimg.com/64/64/arch" />
-    </div>
-
-    <div class="indicator">
-      <span
-        class="indicator__item indicator--start badge badge--large badge--solid badge--danger hover:bg-success-6">NEW</span>
-      <img class="rounded-xl shadow" src="https://placeimg.com/64/64/arch" />
-    </div>
-
-    <div class="indicator">
-      <span
-        class="indicator__item indicator--start badge badge--solid badge--small badge--danger hover:bg-success-6">NEW</span>
-      <img class="rounded-xl shadow" src="https://placeimg.com/64/64/arch" />
     </div>
   </div>
 </body>
