--- a/dev/index.html
+++ b/dev/index.html
@@ -16,6 +16,42 @@
 </head>
 
 <body class="accent-primary mt-32">
+  <div class="my-32">
+    <ul class="grid grid-cols-3 gap-16 list-none">
+      <li class="card">
+        <img
+          src="https://images.unsplash.com/photo-1658953229664-e8d5ebd039ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548&q=80"
+          alt="image">
+        <h4>Card Headline 1</h4>
+
+        <p>Chocolate cake macaroon tootsie roll pastry gummies.
+          Apple pie jujubes cheesecake ice cream gummies sweet roll lollipop.</p>
+      </li>
+
+      <li class="card">
+        <h4>Card Headline 1</h4>
+
+        <img
+          src="https://images.unsplash.com/photo-1658953229664-e8d5ebd039ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548&q=80"
+          alt="image">
+
+        <p>Chocolate cake macaroon tootsie roll pastry gummies.
+          Apple pie jujubes cheesecake ice cream gummies sweet roll lollipop.</p>
+      </li>
+
+      <li class="card">
+        <h4>Card Headline 1</h4>
+
+        <p>Chocolate cake macaroon tootsie roll pastry gummies.
+          Apple pie jujubes cheesecake ice cream gummies sweet roll lollipop.</p>
+
+        <img
+          src="https://images.unsplash.com/photo-1658953229664-e8d5ebd039ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548&q=80"
+          alt="image">
+      </li>
+    </ul>
+  </div>
+
   <div class="my-32 flex flex-wrap gap-16">
     <div class="avatar">
       <div class="avatar__content">
