--- a/dev/index.html
+++ b/dev/index.html
@@ -16,151 +16,37 @@
 </head>
 
 <body class="accent-primary mt-32">
-  <div class="my-32">
-    <ul class="grid grid-cols-3 gap-16 list-none">
-      <li class="card">
-        <img
-          src="https://images.unsplash.com/photo-1658953229664-e8d5ebd039ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548&q=80"
-          alt="image">
-        <h4>Card Headline 1</h4>
+  <div class="my-32 flex gap-16">
+    <div class="w-96 h-96 rounded bg-srf-0"></div>
+    <div class="w-96 h-96 rounded bg-srf-1"></div>
+    <div class="w-96 h-96 rounded bg-srf-2"></div>
+    <div class="w-96 h-96 rounded bg-srf-3"></div>
 
-        <p>Chocolate cake macaroon tootsie roll pastry gummies.
-          Apple pie jujubes cheesecake ice cream gummies sweet roll lollipop.</p>
-      </li>
-
-      <li class="card">
-        <h4>Card Headline 1</h4>
-
-        <img
-          src="https://images.unsplash.com/photo-1658953229664-e8d5ebd039ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548&q=80"
-          alt="image">
-
-        <p>Chocolate cake macaroon tootsie roll pastry gummies.
-          Apple pie jujubes cheesecake ice cream gummies sweet roll lollipop.</p>
-      </li>
-
-      <li class="card">
-        <h4>Card Headline 1</h4>
-
-        <p>Chocolate cake macaroon tootsie roll pastry gummies.
-          Apple pie jujubes cheesecake ice cream gummies sweet roll lollipop.</p>
-
-        <img
-          src="https://images.unsplash.com/photo-1658953229664-e8d5ebd039ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548&q=80"
-          alt="image">
-      </li>
-    </ul>
+    <div class="w-96 h-96 rounded border border-2 border-brd-0"></div>
+    <div class="w-96 h-96 rounded border border-2 border-brd-1"></div>
+    <div class="w-96 h-96 rounded border border-2 border-brd-2"></div>
+    <div class="w-96 h-96 rounded border border-2 border-brd-3"></div>
   </div>
 
-  <div class="my-32 flex flex-wrap gap-16">
-    <div class="avatar">
-      <div class="avatar__content">
-        <img class="mask mask-circle" src="https://placeimg.com/64/64/arch" />
-      </div>
+  <div class="my-32 flex flex-col gap-16">
+    <div class="color-txt-0">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, enim deleniti? Eius dolore hic dolorum pariatur id
+      quisquam velit, nostrum blanditiis quia labore quae quas veniam. Quis voluptatum voluptates iure.
     </div>
 
-    <div class="avatar avatar--status avatar--status--success">
-      <div class="avatar__content">
-        <img class="mask mask-circle" src="https://placeimg.com/64/64/arch" />
-      </div>
+    <div class="color-txt-1">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, enim deleniti? Eius dolore hic dolorum pariatur id
+      quisquam velit, nostrum blanditiis quia labore quae quas veniam. Quis voluptatum voluptates iure.
     </div>
 
-    <div class="avatar avatar--status avatar--status--danger">
-      <div class="avatar__content">
-        <img class="mask mask-circle" src="https://placeimg.com/64/64/arch" />
-      </div>
+    <div class="color-txt-2">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, enim deleniti? Eius dolore hic dolorum pariatur id
+      quisquam velit, nostrum blanditiis quia labore quae quas veniam. Quis voluptatum voluptates iure.
     </div>
 
-    <div class="avatar">
-      <div class="avatar__content avatar__content--placeholder">NM</div>
-    </div>
-
-    <div class="avatar avatar--status">
-      <div class="avatar__content avatar__content--placeholder">NM</div>
-    </div>
-
-    <div class="avatar avatar--status avatar--status--warning">
-      <div class="avatar__content avatar__content--placeholder">NM</div>
-    </div>
-
-    <div class="avatar">
-      <div class="avatar__content avatar__content--placeholder bg-success-2 color-success-7">NM</div>
-    </div>
-
-    <div class="avatar">
-      <div class="avatar__content avatar__content--placeholder bg-danger-2 color-danger-7">NM</div>
-    </div>
-
-    <div class="avatar-group">
-      <div class="avatar">
-        <div class="avatar__content">
-          <img class="mask mask-circle" src="https://placeimg.com/64/64/people" />
-        </div>
-      </div>
-      <div class="avatar">
-        <div class="avatar__content">
-          <img class="mask mask-circle" src="https://placeimg.com/64/64/people" />
-        </div>
-      </div>
-      <div class="avatar">
-        <div class="avatar__content">
-          <img class="mask mask-circle" src="https://placeimg.com/64/64/people" />
-        </div>
-      </div>
-    </div>
-
-    <div class="avatar-group">
-      <div class="avatar">
-        <div class="avatar__content">
-          <img class="mask mask-circle" src="https://placeimg.com/64/64/people" />
-        </div>
-      </div>
-      <div class="avatar">
-        <div class="avatar__content">
-          <img class="mask mask-circle" src="https://placeimg.com/64/64/people" />
-        </div>
-      </div>
-      <div class="avatar">
-        <div class="avatar__content">
-          <img class="mask mask-circle" src="https://placeimg.com/64/64/people" />
-        </div>
-      </div>
-
-      <div class="avatar">
-        <div class="avatar__content avatar__content--placeholder text-md">+69</div>
-      </div>
-    </div>
-  </div>
-
-  <div class="my-32">
-    <span class="badge badge--status badge--success">Success</span>
-    <span class="badge badge--status badge--danger">Danger</span>
-  </div>
-
-  <div class="my-32 space-x-xl">
-    <div class="indicator">
-      <span class="indicator__item flex">
-        <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-info-6 opacity-50"></span>
-        <span class="badge badge--solid badge--info badge--dot border-2 border-srf-1"></span>
-      </span>
-      <img class="rounded-xl shadow" src="https://placeimg.com/64/64/arch" />
-    </div>
-
-    <div class="indicator">
-      <span class="indicator__item indicator--start badge badge--solid badge--danger hover:bg-success-6">NEW</span>
-      <img class="rounded-xl shadow" src="https://placeimg.com/64/64/arch" />
-    </div>
-
-    <div class="indicator">
-      <span
-        class="indicator__item indicator--start badge badge--large badge--solid badge--danger hover:bg-success-6">NEW</span>
-      <img class="rounded-xl shadow" src="https://placeimg.com/64/64/arch" />
-    </div>
-
-    <div class="indicator">
-      <span
-        class="indicator__item indicator--start badge badge--solid badge--small badge--danger hover:bg-success-6">NEW</span>
-      <img class="rounded-xl shadow" src="https://placeimg.com/64/64/arch" />
+    <div class="color-txt-3">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, enim deleniti? Eius dolore hic dolorum pariatur id
+      quisquam velit, nostrum blanditiis quia labore quae quas veniam. Quis voluptatum voluptates iure.
     </div>
   </div>
 </body>
