--- a/dev/cards.html
+++ b/dev/cards.html
@@ -17,7 +17,7 @@
 
 <body class="accent-primary mt-32">
   <div class="my-32">
-    <ul class="grid grid-cols-3 gap-16 list-none">
+    <ul class="grid sm:grid-cols-2 lg:grid-cols-3 gap-16 list-none">
       <li class="card">
         <img class="hover:brightness-200"
           src="https://images.unsplash.com/photo-1658953229664-e8d5ebd039ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548&q=80"
@@ -25,9 +25,11 @@
 
         <h5>Card Headline 1</h5>
 
-        <p class="card__text">Chocolate cake macaroon tootsie roll pastry gummies.
-          Apple pie jujubes cheesecake ice cream gummies sweet roll lollipop.
-        </p>
+        <div class="card__content">
+          <p>Chocolate cake macaroon tootsie roll pastry gummies.
+            Apple pie jujubes cheesecake ice cream gummies sweet roll lollipop.
+          </p>
+        </div>
 
         <button class="btn btn--faded btn--accent">Buy Now</button>
       </li>
@@ -42,9 +44,11 @@
           <span class="badge badge--danger">On Sale</span>
         </div>
 
-        <p class="card__text">Chocolate cake macaroon tootsie roll pastry gummies.
-          Apple pie jujubes cheesecake ice cream gummies sweet roll lollipop.
-        </p>
+        <div class="card__content">
+          <p>Chocolate cake macaroon tootsie roll pastry gummies.
+            Apple pie jujubes cheesecake ice cream gummies sweet roll lollipop.
+          </p>
+        </div>
 
         <button class="btn btn--faded btn--info">Buy Now</button>
       </li>
@@ -56,18 +60,21 @@
           src="https://images.unsplash.com/photo-1658953229664-e8d5ebd039ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548&q=80"
           alt="image">
 
-        <p class="card__text">Chocolate cake macaroon tootsie roll pastry gummies.
-          Apple pie jujubes cheesecake ice cream gummies sweet roll lollipop.
-        </p>
+        <div class="card__content">
+          <p>Chocolate cake macaroon tootsie roll pastry gummies.
+            Apple pie jujubes cheesecake ice cream gummies sweet roll lollipop.
+          </p>
+        </div>
       </li>
 
       <li class="card">
         <h5>Card Headline 1</h5>
 
-        <p class="card__text">Chocolate cake macaroon tootsie roll pastry gummies.
-          Apple pie jujubes cheesecake ice cream gummies sweet roll lollipop.
-        </p>
-
+        <div class="card__content">
+          <p>Chocolate cake macaroon tootsie roll pastry gummies.
+            Apple pie jujubes cheesecake ice cream gummies sweet roll lollipop.
+          </p>
+        </div>
         <img
           src="https://images.unsplash.com/photo-1658953229664-e8d5ebd039ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548&q=80"
           alt="image">
@@ -76,8 +83,8 @@
       <li class="card">
         <h5>Card Headline 1</h5>
 
-        <div class="card__section card__section--border">
-          <p class="card__text">Chocolate cake macaroon tootsie roll pastry gummies.
+        <div class="card__content card__section--border">
+          <p>Chocolate cake macaroon tootsie roll pastry gummies.
             Apple pie jujubes cheesecake ice cream gummies sweet roll lollipop.
           </p>
         </div>
