--- a/dev/index.html
+++ b/dev/index.html
@@ -11,12 +11,24 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:300,400,500,600,700&display=swap" rel="stylesheet">
 </head>
 
 <body class="accent-primary mt-32">
   <div class="my-32 flex gap-16">
+    <nav class="tabs tabs--bordered" 4aria-label="Tabs">
+      <a class="tabs__item tabs__item--bordered">Home</a>
+      <a class="tabs__item tabs__item--bordered tabs__item--active">Profile</a>
+      <a class="tabs__item tabs__item--bordered">Settings</a>
+    </nav>
+  </div>
+
+  <div class="my-32 flex gap-16 accent-secondary">
+    <nav class="tabs tabs--bordered w-full" 4aria-label="Tabs">
+      <a class="tabs__item tabs__item--bordered w-1/3">Home</a>
+      <a class="tabs__item tabs__item--bordered w-1/3 tabs__item--active">Profile</a>
+      <a class="tabs__item tabs__item--bordered w-1/3">Settings</a>
+    </nav>
   </div>
 </body>
 
