--- a/dev/index.html
+++ b/dev/index.html
@@ -16,7 +16,21 @@
 
 <body class="mt-32">
   <div class="my-32 flex gap-16">
+    <div class="text-sm breadcrumbs">
+      <ul>
+        <li><a>Home</a></li>
+        <li><a>Documents</a></li>
+        <li>Add Document</li>
+      </ul>
+    </div>
+  </div>
 
+  <div class="prose">
+    Lorem <a href="">ipsum</a> dolor, sit amet consectetur adipisicing elit. Ipsum alias laborum similique. Laborum eius
+    error dolorum
+    voluptatibus <a href="" class="link--external">asperiores</a> repudiandae quibusdam reprehenderit, ad, non
+    laudantium dolore rerum repellendus dicta cum
+    quidem?
   </div>
 </body>
 
