--- a/dev/index.html
+++ b/dev/index.html
@@ -25,6 +25,41 @@
     </div>
   </div>
 
+  <div class="my-32 flex gap-16">
+    <div class="accent-danger text-sm breadcrumbs bg-srf-1 px-12 rounded border">
+      <ul>
+        <li>
+          <a>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+              class="w-16 h-16 mr-4 stroke-current">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z"></path>
+            </svg>
+            Home
+          </a>
+        </li>
+        <li>
+          <a>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+              class="w-16 h-16 mr-4 stroke-current">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z"></path>
+            </svg>
+            Documents
+          </a>
+        </li>
+        <li>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="w-16 h-16 mr-4 stroke-current">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M9 13h6m-3-3v6m5 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z">
+            </path>
+          </svg>
+          Add Document
+        </li>
+      </ul>
+    </div>
+  </div>
+
   <div class="prose">
     Lorem <a href="">ipsum</a> dolor, sit amet consectetur adipisicing elit. Ipsum alias laborum similique. Laborum eius
     error dolorum
