--- a/dev/index.html
+++ b/dev/index.html
@@ -14,26 +14,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:300,400,500,600,700&display=swap" rel="stylesheet">
 </head>
 
-<body class="mt-32 flex flex-col gap-10">
-  <div class="divider">Continue</div>
-
-  <div class="divider divider--nogap">
-    <button class="btn rounded-full">
-      <svg class="-ml-4 mr-2 h-20 w-20 color-grey-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-        fill="currentColor" aria-hidden="true">
-        <path fill-rule="evenodd"
-          d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
-          clip-rule="evenodd" />
-      </svg>
-      <span>Button text</span>
-    </button>
-  </div>
-
-  <div class="flex w-full">
-    <div class="card h-128 centered font-semibold">Content A</div>
-    <div class="divider divider--vertical">OR</div>
-    <div class="card h-128 centered font-semibold">Content B</div>
-  </div>
+<body class="mt-32 py-32 flex flex-col gap-64">
+  <input type="range" name="range" id="range-1">
+  <input type="range" name="range" id="range-1" class="accent-info">
 </body>
 
 </html>
