--- a/dev/sliders.html
+++ b/dev/sliders.html
@@ -15,7 +15,8 @@
 </head>
 
 <body class="mt-32 py-32 flex flex-col gap-64">
-
+  <input type="range" name="range" id="range-1">
+  <input type="range" name="range" id="range-1" class="accent-info">
 </body>
 
 </html>
