--- a/dev/progress.html
+++ b/dev/progress.html
@@ -14,7 +14,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:300,400,500,600,700&display=swap" rel="stylesheet">
 </head>
 
-<body class="mt-32 py-32 flex flex-col gap-64">
+<body class="mt-32 py-32 flex flex-col gap-48 items-center">
+  <progress class="progress w-1/2" value="0" max="100"></progress>
+  <progress class="progress w-1/2 accent-neutral" value="25" max="100"></progress>
+  <progress class="progress w-1/2 accent-danger" value="50" max="100"></progress>
+  <progress class="progress w-1/2 accent-info" value="75" max="100"></progress>
+  <progress class="progress w-1/2" value="100" max="100"></progress>
+  <progress class="progress w-1/2"></progress>
 </body>
 
 </html>
