--- a/dev/sliders.html
+++ b/dev/sliders.html
@@ -15,8 +15,15 @@
 </head>
 
 <body class="mt-32 py-32 flex flex-col gap-64">
-  <input type="range" name="range" id="range-1">
-  <input type="range" name="range" id="range-1" class="accent-info">
+  <div class="range-slider">
+    <input type="range" name="range" id="range-1">
+    <div class='range-slider__progress'></div>
+  </div>
+
+  <div class="range-slider accent-info">
+    <input type="range" name="range" id="range-1">
+    <div class='range-slider__progress'></div>
+  </div>
 </body>
 
 </html>
