--- a/dev/sliders.html
+++ b/dev/sliders.html
@@ -15,8 +15,10 @@
 </head>
 
 <body class="mt-32 py-32 flex flex-col gap-64">
-  <input type="range" class="range-slider" min="0" max="100" step="1" value="50">
-  <input type="range" class="range-slider accent-danger" min="0" max="100" step="10" value="50">
+  <input type="range" min="0" max="100" step="1" value="50">
+  <input type="range" class="accent-neutral" min="0" max="100" step="10" value="50">
+  <input type="range" class="accent-info" min="0" max="100" step="10" value="50">
+  <input type="range" class="my-slider" min="0" max="100" step="10" value="50">
 </body>
 
 </html>
