--- a/dev/cards.html
+++ b/dev/cards.html
@@ -17,7 +17,7 @@
 <body class="accent-primary mt-32">
   <div class="my-32">
     <ul class="grid sm:grid-cols-2 lg:grid-cols-3 gap-16 list-none">
-      <li class="card">
+      <li class="card my-custom-card">
         <img class="hover:brightness-200"
           src="https://images.unsplash.com/photo-1658953229664-e8d5ebd039ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548&q=80"
           alt="image">
