--- a/dev/badges.html
+++ b/dev/badges.html
@@ -106,7 +106,7 @@
 
       <span class="badge badge--outline badge--danger badge--group">
         <span>Badge</span>
-        <button class="btn btn--circle btn--ghost btn--danger">
+        <button class="btn btn--circle btn--faded btn--danger">
           <svg class="h-12 w-12" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
             stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
