--- a/dev/alerts.html
+++ b/dev/alerts.html
@@ -24,7 +24,17 @@
     </div>
 
     <div class="alert__body">
-      <div class="alert__header">Boomer!</div>
+      <div class="alert__header">
+        <span>Boomer!</span>
+        <div class="alert__button ">
+          <button class="btn btn--circle btn--ghost">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+            </svg>
+          </button>
+        </div>
+
+      </div>
       <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
     </div>
   </div>
@@ -263,7 +273,17 @@
     </div>
 
     <div class="alert__body">
-      <div class="alert__header">Boomer!</div>
+      <div class="alert__header">
+        <span>Boomer!</span>
+        <div class="alert__button">
+          <button class="btn btn--circle btn--ghost btn--danger">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+            </svg>
+          </button>
+        </div>
+
+      </div>
       <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
     </div>
   </div>
