--- a/dev/index.html
+++ b/dev/index.html
@@ -15,6 +15,10 @@
 </head>
 
 <body class="mt-32 py-32 flex flex-col gap-64">
+  <div class="box w-256 h-256 centered">
+    <button class="btn btn--solid">Try to Click Me!</button>
+    <div class="overlay"></div>
+  </div>
 </body>
 
 </html>
