--- a/dev/alerts.html
+++ b/dev/alerts.html
@@ -24,16 +24,16 @@
     </div>
 
     <div class="alert__body">
-      <div class="alert__header">
-        <span>Boomer!</span>
-        <div class="alert__button ">
-          <button class="btn btn--circle btn--ghost">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-            </svg>
-          </button>
-        </div>
+      <div class="alert__button">
+        <button class="btn btn--circle btn--ghost">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+          </svg>
+        </button>
+      </div>
 
+      <div class="alert__header">
+        <span class="alert__title">Boomer!</span>
       </div>
       <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
     </div>
@@ -48,7 +48,10 @@
     </div>
 
     <div class="alert__body">
-      <div class="alert__header">Boomer!</div>
+      <div class="alert__header">
+        <span class="alert__title">Boomer!</span>
+      </div>
+
       <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
     </div>
   </div>
@@ -62,7 +65,10 @@
     </div>
 
     <div class="alert__body">
-      <div class="alert__header">Boomer!</div>
+      <div class="alert__header">
+        <span class="alert__title">Boomer!</span>
+      </div>
+
       <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
     </div>
   </div>
@@ -76,7 +82,10 @@
     </div>
 
     <div class="alert__body">
-      <div class="alert__header">Boomer!</div>
+      <div class="alert__header">
+        <span class="alert__title">Boomer!</span>
+      </div>
+
       <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
     </div>
   </div>
@@ -90,7 +99,10 @@
     </div>
 
     <div class="alert__body">
-      <div class="alert__header">Boomer!</div>
+      <div class="alert__header">
+        <span class="alert__title">Boomer!</span>
+      </div>
+
       <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
     </div>
   </div>
@@ -104,7 +116,10 @@
     </div>
 
     <div class="alert__body">
-      <div class="alert__header">Boomer!</div>
+      <div class="alert__header">
+        <span class="alert__title">Boomer!</span>
+      </div>
+
       <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
     </div>
   </div>
@@ -118,7 +133,10 @@
     </div>
 
     <div class="alert__body">
-      <div class="alert__header">Boomer!</div>
+      <div class="alert__header">
+        <span class="alert__title">Boomer!</span>
+      </div>
+
       <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
     </div>
   </div>
@@ -132,7 +150,10 @@
     </div>
 
     <div class="alert__body">
-      <div class="alert__header">Boomer!</div>
+      <div class="alert__header">
+        <span class="alert__title">Boomer!</span>
+      </div>
+
       <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
     </div>
   </div>
@@ -160,7 +181,10 @@
     </div>
 
     <div class="alert__body">
-      <div class="alert__header">Boomer!</div>
+      <div class="alert__header">
+        <span class="alert__title">Boomer!</span>
+      </div>
+
       <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
     </div>
   </div>
@@ -174,7 +198,10 @@
     </div>
 
     <div class="alert__body">
-      <div class="alert__header">Boomer!</div>
+      <div class="alert__header">
+        <span class="alert__title">Boomer!</span>
+      </div>
+
       <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
     </div>
   </div>
@@ -188,7 +215,10 @@
     </div>
 
     <div class="alert__body">
-      <div class="alert__header">Boomer!</div>
+      <div class="alert__header">
+        <span class="alert__title">Boomer!</span>
+      </div>
+
       <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
     </div>
   </div>
@@ -203,7 +233,10 @@
     </div>
 
     <div class="alert__body">
-      <div class="alert__header">Boomer!</div>
+      <div class="alert__header">
+        <span class="alert__title">Boomer!</span>
+      </div>
+
       <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
     </div>
   </div>
@@ -217,7 +250,10 @@
     </div>
 
     <div class="alert__body">
-      <div class="alert__header">Boomer!</div>
+      <div class="alert__header">
+        <span class="alert__title">Boomer!</span>
+      </div>
+
       <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
     </div>
   </div>
@@ -231,7 +267,10 @@
     </div>
 
     <div class="alert__body">
-      <div class="alert__header">Boomer!</div>
+      <div class="alert__header">
+        <span class="alert__title">Boomer!</span>
+      </div>
+
       <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
     </div>
   </div>
@@ -245,7 +284,10 @@
     </div>
 
     <div class="alert__body">
-      <div class="alert__header">Boomer!</div>
+      <div class="alert__header">
+        <span class="alert__title">Boomer!</span>
+      </div>
+
       <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
     </div>
   </div>
@@ -259,7 +301,10 @@
     </div>
 
     <div class="alert__body">
-      <div class="alert__header">Boomer!</div>
+      <div class="alert__header">
+        <span class="alert__title">Boomer!</span>
+      </div>
+
       <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
     </div>
   </div>
@@ -274,16 +319,38 @@
 
     <div class="alert__body">
       <div class="alert__header">
-        <span>Boomer!</span>
-        <div class="alert__button">
-          <button class="btn btn--circle btn--ghost btn--danger">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-            </svg>
-          </button>
-        </div>
-
+        <span class="alert__title">Boomer!</span>
       </div>
+
+      <div class="alert__button">
+        <button class="btn btn--circle btn--ghost btn--danger">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+          </svg>
+        </button>
+      </div>
+
+      <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
+    </div>
+  </div>
+
+  <div class="alert alert--outline">
+    <div class="alert__icon">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        <path stroke-linecap="round" stroke-linejoin="round"
+          d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+      </svg>
+    </div>
+
+    <div class="alert__body">
+      <div class="alert__button">
+        <button class="btn btn--circle btn--ghost">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+          </svg>
+        </button>
+      </div>
+
       <div>You fucked up! Humanity is therefore doomed for eternity! Well done, champ!</div>
     </div>
   </div>
